Update 'pjj8rzpu0-dotnet-basic' component image to: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:2b9e34b95d57de800aea7675897e2af236a0d424@sha256:610349bbae7c619b72cd0cb5b896170a255caee05ef29da8c18907e5571969ab

--- a/components/pjj8rzpu0-dotnet-basic/overlays/development/deployment-patch.yaml
+++ b/components/pjj8rzpu0-dotnet-basic/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: pjj8rzpu0-dotnet-basic
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-dotnet-basic:2b9e34b95d57de800aea7675897e2af236a0d424@sha256:610349bbae7c619b72cd0cb5b896170a255caee05ef29da8c18907e5571969ab
+          name: container-image
